--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -13,7 +13,7 @@
 Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [!] ВНИМАНИЕ! Требуется версия PHP >= 5.3.2
-[!] Рад представить вам очередной релиз СуперНовы. Перед вами - результат более чем года работы. Фактически, в этом мегапатче объединены целых четыре релиза:
+[!] Рад представить вам очередной релиз СуперНовы. Перед вами - результат более чем года работы. Фактически, в этом мегапатче объединены целых ПЯТЬ релизов:
       1. "Зима-2014" - системный релиз, где было проведена гигантская работа по упорядочиванию внутренних механизмов работы:
         - Все юниты были отвязаны в БД от записей планет и пользователей;
         - Вся работа с юнитами была переписана с нуля;
@@ -25,6 +25,8 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
       2. "Весна-Лето 2014" - багфиксы и небольшие оптимизации релиза З-2014;
       3. "Лето-Осень 2014" - "мобильнутый релиз". Было сделано множество улучшений и усовершенствования для большего удобства игры с мобильных устройств (насколько это возможно без полной переделки темплейта и всех скинов);
       4. "Зима 2014-2015" - "бета релиз". В начале зимы была выпущена бета 39-го релиза, но потом как-то всё закрутилось - новый год, фишки к НГ, ивенты к НГ, просто фишки, просто ивенты - и объем кода, написанного после беты неожиданно сам начал тянуть на отдельный релиз
+      5. "Март-апрель 2015" - "бета релиз". В середине февраля наконец-то было решено завязать с добавлением фишек и просто пофиксить баги... Очнулся я только в середине апреля. В игре появились звук, опросы, переработан код таймера, была добавлена пачка улучшений, пофикшены баги и переписана авторизация...
+    В общем, тут я решил все-таки выпустить 39й релиз as-is и сделать стабильную ветку
     Общий объем проделанной работы можно оценить по количеству коммитов в GitHub. Ну или хотя бы по чейнджлогу релиза, приведенному ниже
 
 [#] payment_xsolla 1a0
@@ -124,6 +126,8 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
         Исправлена ошибка неправильных кодов для смайликов ":)" и ":("
     (!) В чате теперь доступен расширенный функционал BBCode (см. ниже)
     (+) Чат корректно работает с никами, содержащими символы "'", " ", "\", "/", "&"
+    (+) Звук
+        Добавлено звуковое уведомление при получении сообщения в чате
     (%) Пермачат
         Исправлена ошибка с неработающим ресайзингом элементов пермачата
     (@) Добавлена поддержка компактизированных ников - соответственно в БД уменьшен размер таблицы с сообщениями
@@ -151,8 +155,9 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
     Иконки-ссылки для загрузки приложений под Android, Windows 8.1, Windows Phone 8
     Иконки располагаются в каталоге модуля
 
-[#] unit_captain 3a0
+[#] unit_captain 3b0
     (~) Работа с Капитаном при возвращении флота вынесена из основного кода в модуль
+    (~) Стоимость Капитана снижена до 20.000 ТМ
 
 [#] misc_radio v2c2
     [!] Новый  HTML5/SWF плеер, совместимый с подавляющим большинством устройств
@@ -244,6 +249,7 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
     Исправлена ошибка появления отрицательных цифр в попапе обломков, если на планете не хватает дейтерия для отправки переработчиков
     JS-код переписан с использованием jQuery и большая его часть вынесена в отдельный файл
     Переверстана страница с активным использованием CSS - размер итоговой страницы уменьшен на несколько десятков % - в зависимости от населенности системы и активности флотов в ней
+    Теперь на уничтоженной планете/луне не всплывает попап
 [!] Империя
     Дважды переверстана страница "Империя" с активным использованием CSS и jQuery
     При идентичном виде и идентичной функциональности, на тестовом примере (15 планет при средней застройке) выигрышь в размере составил порядка 60-70%% при уже включенном минификаторе!
@@ -251,6 +257,7 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
     Добавлено количество текущих/максимальных экспедиций
 [!] Планета
     Размер страницы уменьшен на 5%-20%
+    Добавлено отображение бонусных уровней Губернатора
     Ссылка "Переработать" сделана кнопкой. Она всегда показывается, если на планете есть переработчики. При этом, если обломков нет на орбите - кнопка неактивна
 [!] Планета/Управление
     Переверстана страница. Теперь разные типы элементов разделены на группы и упорядочены так, что бы исключить случайное нажатие на мобильных устройствах
@@ -265,6 +272,7 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
       - Сделано подтверждение на перенос столицы;
       - Увеличена высота кнопки и кнопка теперь отключается, если перенос невозможен
       - Количество ТМ, нужной для операции, теперь форматируется с группировкой тысяч и кодируется цветом
+    Уточнена надпись - какой пароль нужно ввести для сноса колонии
 [!] Меню - Крадущаяся мышка, затаившееся меню
     Новые авторские иконки: уменьшенного размера, оптимизированные, оригинальные
     Появилась возможность спрятать меню разово или однократно - до обновления страницы или перехода на другую страницу
@@ -301,6 +309,7 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
     На странице редактирования теперь только важность Заметки выделяется цветом, а не вся Заметка, как раньше
     Клик на координатах в обычных и прилепленных Заметках откроет страницу "Вселенная" в указанной галактике и системе
     При редактировании заметки иконки подтверждения и отмены изменений разнесены в вертикальной плоскости
+    Можно делать закладки на слот Экспедиции
 [!] Артефакты
     Новый тип Артефакта: Крюк. Он телепортирует астероид из ближайшего метеоритного пояса и запускает его на орбиту планеты, создавая таким образом луну. Доступны три вида Крюков: Малый, Средний и Большой. Малый создает луну минимального диаметра (1100 км), Большой - максимального диаметра (8999 км), а Средний - луну случайного диаметра (от 1100 до 8999 км)
     Изменена логика работы Наностроителя и Эврестического Чипа. Теперь они уменьшают время соотвественно текущего исследования в Империи и постройки/разрушения текущего строения на планете/луне в два раза (если до окончания процесса осталось больше часа) или моментально заканчивают процесс (если до окончания осталось не более 1 часа)
@@ -308,6 +317,15 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
     Добавлены временные картинки для Крюков
     На Эвристический чип и Наностроитель добавлена защита от случайного срабатывания. Теперь они не срабатывают, если осталось меньше 1 минуты для постройки
     Исправлена редкая ошибка, когда АКК мог пропасть при неудачной попытке развернуть его на полной планете
+[!] Опросы
+    Добавлена возможность проводить опросы/голосования
+    Опросы прикрепляются к новостям - один опрос на одну новость
+    Можно копировать новости с опросами
+    Можно редактировать новости с опросами, но при этом потеряются текущие результаты опроса
+    Поддерживается произвольное количество ответов, но не менее двух
+    Можно устанавливать срок действия опроса, используя синтаксис PHP-функции strtotime() или просто задавая дату окончания опроса (по серверному времени). По умолчанию опрос действует 1 сутки
+    Игрок может выбрать 1 вариант ответа из списка
+    Добавлена индикация срока опроса
 [!] UBEv4.1
     Изменена процедура обсчета боя. Теперь щиты считаются индивидуально для каждого корабля
     Это значит, что теперь практически невозможно провести бой без потерь с обеих сторон
@@ -339,8 +357,15 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
     Теперь при расчете статистики Альянса так же учитывается юниты Альянса и ресурсы в банке
     Теперь расчитывается и отображается изменение места Альянса во всех типах статистики
     Исправлена очепятка, из-за которой вообще не учитывался дейтерий
+    Исправлена очепятка, из-за которой в очках по ресурсам не учитывались ресурсы, находящиеся в очередях
     Все вышеуказанные изменения приведут к однократной перетусовке в статистике и росту абсолютного значения всех видов статистики
+    Теперь в базе хранится статистика за 2 недели
+    Настраивается количество дней в таблице `config` переменная 'stats_history_days' (по умолчанию - 14 дней)
+    Теперь длинные ники игроков и названия Альянсов не переносятся на вторую строку
+    Теперь для новых аккаунтов при первом обсчете статистики в изменении места показывается "*", а не "-(новое место)"
+    Настройки страницы статистики (типа статистики, Игроки/Альянсы итд) теперь передаются в строке браузера - теперь можно легко обмениваться ссылками на конкретную страницу статистики
 [!] Настройки
+    Теперь при смене пароля игроку не надо логиниться заново - при смене пароля так же изменяется кука
     Замер времени
       - Замеры времени делаются индивидуально для каждого устройства
       - Теперь время не будет сбиваться при переходе с устройства на устройство вне зависимости от разницы настроек во времени/часовых поясах
@@ -369,10 +394,17 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
     Теперь парсер понимает URL-ы, стоящие сразу за символами ")", "]" и "}"
     Устаревшие HTML-тэги <u> и <s> заменены на <span style>
     Исправлена ошибка добавления в конец URL закрывающего BBCode при парсинге чистых URL
+[!] Звуки
+    Добавлена библиотека для поддержки звуков ion.sound © 2014 Денис Инешин лицензия http://ionden.com/a/plugins/licence.html
+    По умолчанию звуки отключены. Для включения нужно на странице "Настройки" (вкладка "Интерфейс") поставить галочку "Включить звуки в игре" и сохранить изменения
+    Работа звуков в устаревших и/или мобильных версиях браузеров НЕ ГАРАНТИРУЕТСЯ!
 [!] Платежи
-    Изменены скидки за оптовую покупку. Теперь небольшие сумм покупок дают большую скидку, чем раньше
     Полностью переделан интерфейс системы платежей
-    Добавлена индикация стоимости выбранного количества ММ в валюте сервера на всех этапах платежа
+    Изменены скидки за оптовую покупку. Теперь небольшие сумм покупок дают большую скидку, чем раньше
+    Курсы валют и бонусы оптовой покупки сведены в одну ячейку
+    Игрок теперь может выбрать валюту по-умолчанию
+    Валюта игрока будет использована во всех расчетах вместо базовой валюты сервера, т.е. при расчете стоимости ММ, стоимости пакетов итд
+    На каждом пакете теперь указывается его стоимость в валюте игрока
     Выбор фиксированного пакета при покупке ММ теперь сразу переводит на следующую страницу
     Добавлено 17 новых методов платежей и картинок к ним
     Добавлены картинки для большинства поддерживаемых методов платежей
@@ -382,6 +414,10 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
     Добавлена поддержка WMB - белорусских рублей на WebMoney
     Основной валютой сервера по умолчанию установлен доллар США (USD). Скорректированы курсы всех валют
     Платежи теперь соблюдают порядок, назначенный им в module
+[!] Император
+    Переработана страница "Император"
+    Теперь на странице показывается статистика изменения основных показателей игрока за прошедшие 2 недели (меньше - если не накоплена нужная статистика)
+    Добавлен пробел между "У вас" и количеством сообщений
 [!] Режим отпуска
     Переделана процедура ухода в отпуск
     Теперь на странице отпуска не отображаются: меню, новости, навбар... По прежнему блокируется вход на любые страницы игры. Отдыхать - так отдыхать!
@@ -394,10 +430,12 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
     Страницы логина, регистрации и восстановления пароля сведены в одну и сделаны более дружественными для мобильных пользователей:
       - При восстановлении пароля отсылается цифровой код, что облегчает ввод с экранной клавиатуры
       - Код восстановления высылыается не чаще раза в час и действует 1 сутки
+    Теперь при сбросе пароля происходит автологин - не надо самому логиниться с новым паролем
     Переделан выбор языков
     Добавлены страницы редиректа старых адресов reg.php и lostpassword.php
     Данные об user_agent и user_proxy вынесены в отдельную таблицу со справочником
     Исправлена ошибка входа в игру, если текущей планетой является удаленная по Обслуживанию планета
+    Исправлена проблема пропадающих элементов на странице логина
 [!] Интерфейс
     Мультиэлемент ввода чисел - полная переработка:
       - Теперь можно не кликать несколько раз подряд для увеличения (+)/уменьшения (-) значения в ячейке, а достаточно зажать кнопку мышки - количество будет изменятся автоматически
@@ -422,6 +460,9 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
     Переработано множество страниц для совместимости с новым видом интерфейса, сделано огромное количество мелких правок - так что даже не буду пытаться их все перечислить
     Теперь текст кнопок и вводимые данные в элементах ввода имеют жирный шрифт
     Везде, где возможно, поля ввода для логина и пароля ограничены 32 символами
+    Добавлена индикация аккаунтов, находящихся в отпуске. Такие аккаунты отмечаются специальной иконкой в нике и надписью "В отпуске" на странице "Император"
+    Для исключения блокировки корпоративными фаерволлами и прочим, "sex" заменен на "gender"
+    Добавлена возможность выбрать пол в "Настройках"
     Удалены неиспользуемые картинки в каталоге OpenGame/img
     Все темплейты теперь используют общую иконку для отправки писем из /design/images
     Ссылки, открывающие дополнительные окна, теперь подчеркиваются двойной линией
@@ -445,6 +486,8 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
       - Добавлена агрегирование статистики онлайна игроков. Записи, сделанные ранее 1 числа три месяца назад, агрегируются в записи с интервалом по 10 минут со средним арифметическим онлайна за указанный интервал
       - Добавлена чистка общих логов. Из таблицы `logs` при обслуживании удаляются записи, сделанные ранее 1 числа три месяца назад
       - Добавлена чистка game_watchlist и stats_hide_player_list от несуществующих пользователей
+      - Теперь удаляются все сообщения (кроме личных и альянсовских) старше 4 недель у всех игроков
+      - Теперь удаляются все сообщения (кроме личных и альянсовских) любой давности у игроков, неактивных более 4 недель
     Переделана работа режима обслуживания. Теперь различаются источники, переводящие сайт в режим обслуживания, для каждого из которых выводится своё сообщение:
       - Блокировка из админки. Игроки в причине блокировки видят то, что введено в настройках сайта;
       - Блокирование из статистики - своё сообщение;
@@ -467,6 +510,7 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
     Начисление ТМ:
       - Убрано начисление по планете
       - Теперь при начислении ТМ через админку в комментариях пишется причина начисления и кто произвел начисление
+      - Исправлена ошибка начисления ТМ игрокам, чье имя начинается со знака "-"
     Начисление ММ:
       - Теперь при начислении ММ через админку в комментариях пишется причина начисления и кто произвел начисление
     Локализация:
@@ -484,6 +528,14 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
     Кнопка 1/(доступных экспедиций) теперь появляется только если не дублирует кнопки 1/(максимальное количество экспедиций) и "Все корабли"
     Теперь при отправке флота виден уровень Капитана на планете и его скиллы
     На второй странице отправки флота список текущих планет и список Заметок с координатами переделаны в кнопки для удобства мобильных пользователей
+    При подборе кораблей во флот теперь показывается актуальная скорость каждого корабля
+    Добавлены разделители тысяч к количеству кораблей во второй колонке
+    На странице подбора кораблей во флот добавлена опция сортировки списка кораблей
+    Возможна следующие виды сортировки: "Стандартная", "По названию", "По скорости", "По количеству" и "По ID" - по возрастанию характеристики
+    Так же возможна инверсная сортировка - по убыванию характеристики
+    Выбор вида и хода сортировки осуществляется дропдауном и галочкой в нижней части таблицы
+    Сделанный выбор сохраняется в настройках пользователя и затем используется при следующих открытиях той же страницы
+    Изменения вида или хода сортировки перегружает страницу
 [+] Своз ресурсов
     Теперь в расчете строки ИТОГО учитывается ёмкость трюмов флота, т.е. показывается реальное количество ресурсов, которые будут свезены по текущим данным
     Код расчёта переписан на jQuery
@@ -494,12 +546,10 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
       - В истории показываются в порядке написания сообщения от собеседника игроку и неудаленные сообщения от игрока собеседнику, но не более 20 сообщений
       - Так же добавлена автоматическая замена нескольких подряд префиксов ответов ("RE:") на один
     "Написать сообщение" теперь стало отдельной кнопкой
-[+] Император
-    Переработана страница "Император"
-    Добавлен пробел между "У вас" и количеством сообщений
 [+] Рекорды
     Для флотов и обороны теперь показывается суммарное количество юнитов на всех планетах и лунах. Флоты в полёте по-прежнему не учитываются
 [+] Чат
+    Добавлен звук при получении нового сообщения в чате
     Теперь если по какой-либо причине отключается модуль chat_advanced, то в чате не видны личные и информационные сообщения
     В списке онлайна Администраторы сервера теперь всегда идут первыми
     Скруглены углы в попапах и в админском элементе ввода сообщений
@@ -525,9 +575,13 @@ Project "SuperNova.WS" Release 39 "2014 annual joint operation report"
     При полностью пустом списке б/у кораблей в продаже он пополняется случайным образом
 
 [%] Альянсы
+    Альянс теперь можно передать любому участнику - а не только заместителю главы
     Исправлена ошибка с возможностью сделать Альянс пустым именем/тэгом/титулом главы
     Исправлено незаполнение имени user_as_ally тэгом при создании Альянса
     Исправлена ошибка отправки многострочных сообщений
+    Исправлена невозможность включить прием заявок после его отключения
+    Исправлена ошибка попадения в список кандидатов на передачу Альянса игроков не из Альянса
+    Исправлен прием игрока в Альянс, чей тег или название содержат спецсимволы
 
 [@] Документация
     В пример конфигурационного файла добавлено уведомление о необходимости использования разных префиксов для нескольких копий СН на одном сервере
