INT-misc-40a3.7: Better mobile browser support. Also added hack to disable Chrome Android FontBusting 'feature'

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1628,7 +1628,7 @@ Project "SuperNova.WS" Release 35 "MVC race reparse teleportation recycle"
     Улучшена поддержка залпового огня
 [~] Юниты/Корабли
     Небольшой ребаланс кораблей
-    Сверхновая - атака уменьшена на  порядок.  При  этом  боевая  эффективность
+    СуперНова - атака уменьшена на  порядок.  При  этом  боевая  эффективность
     корабля изменилось незначительно, благодаря изменению коэфициента  усиления
     залпа. Немного уменьшилась эффективность против наземной обороны  и  легких
     кораблей и увеличилась эффективность против средних кораблей
@@ -1746,7 +1746,7 @@ Project "SuperNova.WS" Release 35 "MVC race reparse teleportation recycle"
 Project "SuperNova.WS" Release 34 "Happy Birthday Supernova! 3rd anniversary"
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [!] Юбилей: 3 года назад 11 июня 2009 года был запущен первый сервер того,  что
-    превратилось в Проект "СверхНовая"
+    превратилось в Проект "СуперНова"
 
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -1802,7 +1802,7 @@ Project "SuperNova.WS" Release 34 "Happy Birthday Supernova! 3rd anniversary"
     "Чертеж" - это  программный  пакет,  дающий  доступ  к  производсту  юнитов
     определенного типа. Доступны следующие чертежи:
     1. Здания: термоядерная электростанция
-    2. Корабли: супертранспорт, гипертранспорт, Звезда Смерти, "Сверхновая"
+    2. Корабли: супертранспорт, гипертранспорт, Звезда Смерти, "СуперНова"
     3. Защитные постройки: планетарная защита
     Чертеж  покупается  на  Империю,  после  чего  указанный  юнит  доступен  к
     производству на всех планетах
@@ -2227,7 +2227,7 @@ Project "SuperNova.WS" Release 33 "Women Day v2012!"
     1. Полный URL сервера - т.е. HTTP-адрес  и  подкаталог  сервера.  Например:
        http://myserver.com/myfolder/.    Это    необходимо    для     первичной
        идентификации сервера. Полный путь необходим для того, что бы  различать
-       несколько копий СверхНовой, установленных на одном IP или домене.
+       несколько копий СуперНовы, установленных на одном IP или домене.
     2. Внутреннее название сервера. Используется для подстановки в сообщения.
     Зачем  вообще  регистрировать  свой  сервер?  В   будущем  планируется  ряд
     возможностей, которые буду доступны только зарегистрированным  серверам.  В
@@ -2666,7 +2666,7 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     12.  Страница  покупки  губернаторов  требует  подтверждение  операции  при
     покупке губернатора, отличного от текущего. Страница покупки имеет защту от
     случайной покупки губернатора при обновлении страницы
-[!] Локализация: СверхНовая использует  кодировку  UTF-8  при  работе  с  БД  и
+[!] Локализация: СуперНова использует  кодировку  UTF-8  при  работе  с  БД  и
     рендере HTML-страниц. Таким образом поддерживаются любые наборы символов
     Все файлы локализации пропущены через редактор и приведены к одному виду
     Добавлены заголовки в файлы локализации
