--- a/docs/install.txt
+++ b/docs/install.txt
@@ -1,6 +1,6 @@
-Проект "Сверхновая"
+Проект "СуперНова"
 ~~~~~~~~~~~~~~~~~~~
-"Сверхновая"  (далее  -  СН)  -  многопользовательская  браузерная  космическая
+"СуперНова"  (далее  -  СН)  -  многопользовательская  браузерная  космическая
 стратегия, клон oGame. СН базируется на  XNova  RageRepack  v.226  (далее  RR).
 Данный файл содержит инструкции по установке СН
 
@@ -18,7 +18,7 @@ Disclaimer aka Отмазка
 изменен, что бы соответствовать моему пониманию об интересной игре.  Принимайте
 это во внимание, когда решаете - устанавливать этот движок себе или нет.
 
-ВНИМАНИЕ! Статус проекта "Сверхновая" - альфа-версия. Практически это означает,
+ВНИМАНИЕ! Статус проекта "СуперНова" - альфа-версия. Практически это означает,
 что очередной апдейт может полностью изменить отдельный аспект игры.
 
 Примерный план развития движка содержится в файле /docs/changelog.xls
@@ -157,7 +157,7 @@ innodb_file_per_table
  2. Создайте в MySQL пользователя "supernova_user" и дайте ему  все  права  на
     базу "supernova"
  3. Загрузите в БД файл /docs/supernova.sql
- 4. Скопируйте файл /docs/config.php.sample в  корневой  каталог  Сверхновой  и
+ 4. Скопируйте файл /docs/config.php.sample в  корневой  каталог  СуперНовы  и
     переименуйте его в config.php
  5. В файле /config.php в строке
     "pass"       => "MYSQL_PASSWORD", // Пароль доступа MySQL сервера.
@@ -165,13 +165,13 @@ innodb_file_per_table
  6. В файле /config.php в строке
     "secretword" => "SUPERNOVA",      // Ключевое слово для создания Cookies
     замените SUPERNOVA какой-либо последовательностью символов
- 7. Загрузите дистрибутив Сверхновой в корневой каталог веб-сервера
+ 7. Загрузите дистрибутив СуперНовы в корневой каталог веб-сервера
  8. Зайдите в игру с админскими правами. По умолчанию админский аккаунт:
     Логин:  'admin' (без кавычек)
     Пароль: 'admin' (без кавычек)
  9. ОБЯЗАТЕЛЬНО смените пароль администратора на странице /options.php
 10. Настройте игру на странице /admin/settings.php
-11. Сверхновая готова к запуску!
+11. СуперНова готова к запуску!
 
 ВНИМАНИЕ! Лом с членов команды (auth_level>0) НЕ  ВЫПАДАЕТ!  Это  не  баг,  это
 сделано  специально   для   усиления   безопасности   сервера!   Для   игры   и
@@ -201,10 +201,10 @@ xCache
 
 Краткий ликбез по GIT
 =====================
-Создать локальную копию Сверхновой в текущем  каталоге  (не  забываем  точку  в
+Создать локальную копию СуперНовы в текущем  каталоге  (не  забываем  точку  в
 конце!):
   git clone git://github.com/supernova-ws/SuperNova.git .
-В текущем каталоге появится самая свежая  копия  Сверхновой  из  ветки  master.
+В текущем каталоге появится самая свежая  копия  СуперНовы  из  ветки  master.
 Теперь  содержимое  нужно  скопировать  в  корневой  каталог  сервера.  Вообще,
 рекомендуется  делать  это  сразу  на  сервере  -  для  избежания   проблем   с
 копированием (был уже такой случай). Но не у всех хостеры  разрешают  запускать
@@ -272,7 +272,7 @@ url.rewrite-once = (
 --------------------
 ВНИМАНИЕ! PHP версии 5.3.1 содержит баг, который препятствует корректной работе
 функции-оболочки, если в параметрах оригинальной функции  содержится  параметр,
-передаваемый по ссылке. Поэтому начиная с 33a12 СверхНовая  не  может  работать
+передаваемый по ссылке. Поэтому начиная с 33a12 СуперНова  не  может  работать
 под PHP этой версии! Обновите PHP на более поздний, или сделайте откат до более
 ранней версии, или используйте предыдущюю версию СН!
 
@@ -483,7 +483,7 @@ https://github.com/supernova-ws/SuperNova/zipball/trunk
     http://forum.supernova.ws/viewforum.php?f=65
 
 
-Сверхновая на github
+СуперНова на github
 ====================
 Страница проекта:
   http://github.com/supernova-ws/SuperNova
@@ -498,7 +498,7 @@ night build - самая свежая версия следующего рели
   git://github.com/supernova-ws/SuperNova.git
 
 
-Сверхновая на sourceforge
+СуперНова на sourceforge
 =========================
 Страница проекта:
   http://sourceforge.net/projects/supernova-ws/
