--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -218,10 +218,10 @@ http://beta.supernova.ws/
   - Прячет ли себя в режимах работы?
 
 
-Телепортация, использование Крюка и БАК, использование Монолита, использование Ворот - увеличивает шанс превращения солнца системы в СверхНовую. Как в исходнике, так и в пункте Назначения
-Эвент СверхНовая
+Телепортация, использование Крюка и БАК, использование Монолита, использование Ворот - увеличивает шанс превращения солнца системы в СуперНову. Как в исходнике, так и в пункте Назначения
+Эвент СуперНова
   - есть время убраться, телепортироваться и продаться
-  - при телепорта заново кидается шанс Сверхновой
+  - при телепорта заново кидается шанс СуперНовы
   - Телепорт - +1%, Ворота - +0.1%, Монолит - +0.001% (?) за левел каждый тик. Тик - каждые 60 минут
   - при взрыве СН сносится % зданий, флота и обороны, равный проценту шанса взрыва с округлением вверх
 
@@ -823,7 +823,7 @@ xsolla - передавать описание платежа
 ======================
 
 
-Текущий билд #39b14.4#
+Текущий билд #40a3.7#
 ~~~~~~~~~~~~~~~~~~~~~
 
 // НА ЛОКАЛХОСТЕ ФЛОТЫ ЛЕТАЮТ !!!! Поменять fleet_update_last
