--- a/README
+++ b/README
@@ -144,5 +144,5 @@ Bellitrized game background (Russian):
 
 Copyright notice
 ================
-Сверхновая copyright (c) 2009-2013 Gorlum для http://supernova.ws
+СуперНова copyright (c) 2009-2013 Gorlum для http://supernova.ws
 Project "SuperNova.WS" copyright (c) 2009-2013 by Gorlum for http://supernova.ws
