--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -148,6 +148,7 @@ Project "SuperNova.WS" Release 40 Beta "RD auth planet universe que sn_timer"
     Добавлена кнопка "Планета":
         - Клик на кнопке откроет страницу "Планета" для текущей планеты;
         - В правом нижнем углу кнопки показывается количество колоний у игрока и максимально возможное количество колоний;
+        - Если на планете есть очередь зданий она выводится на кнопке планеты аналогично Исследованиям и Ангару
     Добавлена кнопка "Верфь":
         - Клик на кнопке откроет страницу "Верфь";
         - При наличии юнитов в очереди Верфи на кнопке будет отображено:
@@ -158,9 +159,13 @@ Project "SuperNova.WS" Release 40 Beta "RD auth planet universe que sn_timer"
             - Время, оставшееся до окончания постройки текущего юнита в текущем слоте
     Отключение кнопок:
         - Добавлена возможность отключения следующих кнопок:
+            - "Исследования"
             - "Планета"
             - "Верфь"
+            - "Флоты в полёте"
+            - "Экспедиции"
             - "Квесты"
+            - "Метаматерия" (при наличии ММ её количество показывается так же на кнопке "Тёмная Материя")
         - Отключение кнопок происходит в пункте меню "Настройки", вкладка "Интерфейс", раздел "Навигационная панель"
     Кнопка "Сообщения":
         - Счетчики сообщений теперь располагаются не в линию, а по углам иконки сообщений:
@@ -170,9 +175,13 @@ Project "SuperNova.WS" Release 40 Beta "RD auth planet universe que sn_timer"
             - Правый нижний - общее количество сообщений.
         - Таким образом на мобильных устройствах будет гораздо проще выбрать нужный тип сообщений
         - Если в почтовом ящике есть сообщения - общее количество соощений в навбаре мягко мерцает
+    По умолчанию кнопка "Исследования" теперь имеет стандартную ширину. Вернуть старый вид можно включив в "Настойках" опцию "Широкая кнопка исследований (старый вид)"
+    Имена планет в дропдауне переключения приведены к стандартному виду [координаты] (тип) Имя
     "Локальное время" переименовано во "Время у игрока", "Серверное время" - во "Время на сервере"
     Добавлены прогресс-бары к плашке исследований
     Убрана горизонтальная зеленая линия над общим количеством ТМ в случае, если на аккаунте нет ММ и/или ММ не подключена в игре
+    Навбар переверстан под flex-box - теперь корректно переносятся кнопки на маленьких экранах
+    Все инлайн-стили вынесены в _template.css
 [!] Меню
     Редизайн пунктов меню:
         - Теперь в стандартном режиме пункты меню выглядят, как кнопки. Однако при этом являются ссылками - т.е. позволяют открывать страницы в новом окне
@@ -194,6 +203,7 @@ Project "SuperNova.WS" Release 40 Beta "RD auth planet universe que sn_timer"
         - Результаты опроса:
             - Бар, показывающий процент проголосовавших, выводится под самим ответом
             - К каждому варианту ответа добавилась индикация процента проголосовавших
+    Кнопки действия над новостью (для Администрации) перенесены из отдельных колонок под саму новость
 
 [!] Страница "Планета"
     Для каждой очереди добавлена дата и время её завершения
@@ -260,6 +270,7 @@ Project "SuperNova.WS" Release 40 Beta "RD auth planet universe que sn_timer"
     Список юнитов в очереди переверстан на дивах с использованием flex-box
     Оптимизирована работа таймера очередей, так что новые прогресс-бары не должны сказаться на быстродействии
     Теперь не рендерится очередь постройки, если контейнер для неё невидим - например, в навбаре
+    На общей панели постройки количество юнитов/уровень в текущем слоте отображается на новой строке
     Оптимизирована выдача HTML-кода - меньше использование свойства style
     Добавлена поддержка нового кода sn_timer
 [!] Страница построек/исследований
@@ -293,6 +304,8 @@ Project "SuperNova.WS" Release 40 Beta "RD auth planet universe que sn_timer"
     Постройка зданий:
         - Добавлено подтверждение на покупку сектора
         - Теперь если при постройке зданий нет свободных секторов - превьюшки затеняются и выводится соответствующее сообщение
+    Добавлено разрежение ячеек в подтаблицы цены и допинформации о юните
+    Добавлено выделение четных рядов другим фоном в подтаблице допинформации
 [!] Страница "Флот на орбите"
     На шаге "Выбрать корабли" при отсутствии кораблей на планете на экране подбора флота доступна кнопка "Свезти ресурсы"
     На шаге "Выбор точки назначения" при выборе планеты/заметки/боевого союза точка назначения флота меняется соответственно
@@ -337,6 +350,7 @@ Project "SuperNova.WS" Release 40 Beta "RD auth planet universe que sn_timer"
         - Отделено имя аккаунта от игрового имени
         - Добавлены кнопки "Показать пароль" ко всем парольным полям
     На вкладке "Интерфейс" добавлена опция "Отключить рамки у таблиц", которая убирает рамки-изображения у элементов дизайна
+    Вкладка "Интерфейс" теперь содержит подвкладки "Общие", "Настройки меню" (бывашя вкладка), "Панель навигации" и "Вселенная"
 
 [!] Responsive Design (RD)
     RD - это не какая-то конкретная фишка, а целый комплекс подходов направленных на поддержку различных разрешений и ориентаций экранов, разных настроек масштабирования в браузере и СН, а так же автомасштабирования страниц в некоторых мобильных браузерах на некоторых платформах:
@@ -366,6 +380,17 @@ Project "SuperNova.WS" Release 40 Beta "RD auth planet universe que sn_timer"
     Всё это, а так же конфигурабельность скинов через 'skin.ini' (см.), позволило веруть в данном релизе скин 'immi'
     Изменены директивы viewport для лучшей поддержки мобильных устройств
     Добавлен хак для отключения хромо-андроидовского FontBusting
+    Пережаты все картинки с сохранением качества изображения. В среднем размер картинок уменьшился примерно на 20%
+    Удалена почти все картинки-дубликаты - как просто дублирующиеся, так и появившиеся в результате добавления класса skin (см. тэги "Код" в changelog_dev.txt)
+    Скин EpicBlue:
+        - Добавлено изображение для ресурса "Метаматерия". Соответственно - оно появилось и во всех остальных скинах;
+        - Переделаны картинки ВебМани на странице платежей при выборе метода платежа
+        - Картинки юнитов:
+            - Заменены изображения Терраформера и Большого Планетарного Шита
+            - Изображения для Нанолаборатории, МИС, Астрокартографии, Гордыни, ТОПа, ПЗ, Малого Планетарного Щита, МПР и Перехватчика приведены к стилю остальных картинок
+            - За проделанную работу - особая благодарность игроку 4apaeff@Alpha
+    Скин supernova-ivash:
+        - Плашки в навбаре заменены на более подходящие по тону - спасибо Ivash@Alpha
 [!] Масштабирование интерфейса
     В помощь Responsive Design в движок добавлена собственная система масштабирования интерфейса - кнопки в навбаре (панель вверху):
         - Кнопка "Шрифт -" уменьшает размер шрифта;
@@ -402,17 +427,14 @@ Project "SuperNova.WS" Release 40 Beta "RD auth planet universe que sn_timer"
     Под полосу застройки и очередь на планете добавлена подложка с фоном
     На каждой планете теперь даже при отсутствии очередей выводятся полупрозрачные иконки, при клике на которые можно сразу перейти к строительству зданий, кораблей и обороны
     Иконка своза ресурсов на луну появляется только при выборе луны
-[+] Дизайн
-    Скин EpicBlue:
-        - Добавлено изображение для ресурса "Метаматерия". Соответственно - оно появилось и во всех остальных скинах;
-        - Переделаны картинки ВебМани на странице платежей при выборе метода платежа
-        - Картинки юнитов:
-            - Заменены изображения Терраформера и Большого Планетарного Шита
-            - Изображения для Нанолаборатории, МИС, Астрокартографии, Гордыни, ТОПа, ПЗ, Малого Планетарного Щита, МПР и Перехватчика приведены к стилю остальных картинок
-            - За проделанную работу - особая благодарность игроку 4apaeff@Alpha
 [+] BBCode
-    Добавлен новый тип ссылок: "sn://" доступный тем же, кому доступны обычные ссылки. Он развертывается в полный URL к корню игры, т.е. если игра стоит по адресу "http://your_domain.tld/your_path/", то "sn://overview.php" будет развернуто в "http://your_domain.tld/your_path/overview.php"
-    Этот тип ссылок так же можно использовать в составе тэга BBCode 'url'
+    "Макросы":
+        - "Макрос" - специальная последовательность символов, которая разворачивается в контекстно-зависимые данные. См. ниже
+        - Макрос "sn://":
+            - Макрос доступен тем, кому доступны обычные ссылки
+            - Макрос развертывается в полный URL к корню игры, т.е. если игра стоит по адресу "http://your_domain.tld/your_path/", то строка "sn://overview.php" будет развернута в "http://your_domain.tld/your_path/overview.php"
+        - Макрос "faq://" - разворачивается в УРЛ ЧаВо, если он прописан в 'url_faq' конфигурации
+    Макросы "sn://" и "faq://" так же можно использовать в составе тэга BBCode 'url', например: "[url=sn://index.php?page=options]Настройки игрока[/url]"
 [+] Акции и ивенты
     Теперь на странице информации "О сервере" выводится стандартное значение рейтов и значение рейтов в рамках акции
     Теперь во время акций с увеличением скорости добычи ресурсов:
