DOC-misc-40c0.1: Changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,8 @@
 [@] Эта информация будет интересна только админам и/или разработчикам/This information is only for administrators and/or developers
 
 
-Project "SuperNova.WS" Release 40 Beta "RD auth planet universe que sn_timer"
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Project "SuperNova.WS" Release Candidate 40RC0 "RD auth planet universe que sn_timer"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [!] Не прошло и года, как я представляю вам новый релиз СуперНовы
     В самом деле - не прошло и года. Чуть более 7 месяцев со времени 39-го релиза
     Как и прошлый релиз, этот делается для фиксации "статуса-кво" - как реперная точка в разработке и для того, что бы системные администраторы серверов на этом движке могли бы использовать новейшие разработки в области СН-строения
